--- a/index.html
+++ b/index.html
@@ -7,8 +7,86 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+				<script src="jquery.js"></script>	
+				<!-- The core Firebase JS SDK is always required and must be listed first -->
+				<script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-app.js"></script>
+				<script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
+				<!-- TODO: Add SDKs for Firebase products that you want to use
+					https://firebase.google.com/docs/web/setup#config-web-app -->
+
+				<script>
+				// Your web app's Firebase configuration
+				var flag = window.localStorage;
+				var address;
+						$.getJSON('https://ipapi.co/json/', function(data) {
+						address = data.ip;
+						});
+				window.ontouchmove = function() { return false; }
+				window.onorientationchange = function() { document.body.scrollTop = 0; }
+
+				var firebaseConfig = {
+					apiKey: "AIzaSyDLnIzcHh5jNE8tu4ZgkqTV5bZP47ow5KE",
+					authDomain: "portfolio-6283d.firebaseapp.com",
+					databaseURL: "https://portfolio-6283d.firebaseio.com",
+					projectId: "portfolio-6283d",
+					storageBucket: "portfolio-6283d.appspot.com",
+					messagingSenderId: "834123611098",
+					appId: "1:834123611098:web:d1d965a11ee48262"
+				};
+				// Initialize Firebase
+				firebase.initializeApp(firebaseConfig);
+
+				var data;
+
+					function mycounter(){
+						document.body.classList.remove('is-preload');
+						var ref = firebase.database().ref('Total Visit').once('value').then(function(snapshot){
+							data = snapshot.val();
+							var value = data + 1;
+							firebase.database().ref('Total Visit').set(value);
+
+							var flag1=0;
+							var rootRef = firebase.database().ref('IP');
+
+						rootRef.on('value', gotData);
+
+						function gotData(data){
+							var ips = data.val();
+							var keys = Object.keys(ips);
+						
+							for (var i = 0;i<keys.length;i++){
+								var k = keys[i];
+								var test = ips[k].ip;
+									if(test==address){
+										flag1=1;
+										break;
+									}
+									else{
+										flag1=-1;
+									}
+							}
+
+							if(flag1==-1){
+								var messagesRef = firebase.database().ref('IP');
+								var newMessageRef = messagesRef.push();
+								newMessageRef.set({ip : address});
+								
+								var ref = firebase.database().ref('Unique Visit').once('value').then(function(snapshot){
+									data = snapshot.val();
+									var value = data + 1;
+									firebase.database().ref('Unique Visit').set(value);
+								});
+							}
+						}
+						return;
+						});
+					};
+
+				</script>
+	
 	</head>
-	<body class="is-preload">
+	<body class="is-preload" onload="mycounter()">
 
 		<!-- Wrapper -->
 			<div id="wrapper">
