--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="https://github.com/pritsahkar" class="fa-github">Github</a></li>
-								<li><a href="https://www.instagram.com/prit_patel2000/" class="fa-instagram">Instagram</a></li>
-								<li><a href="mailto:pritsahkar2000@gmail.com" class="fa-envelope-o">Gmail</a></li>
+								<li><a href="https://github.com/pritsahkar" class="fa-github" target="_blank">Github</a></li>
+								<li><a href="https://www.instagram.com/prit_patel2000/" class="fa-instagram" target="_blank">Instagram</a></li>
+								<li><a href="mailto:pritsahkar2000@gmail.com" class="fa-envelope-o" target="_blank">Gmail</a></li>
 							</ul>
 						</footer>
 					</section>
