New Project add

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="flex-container">
         <div><a href="https://www.instagram.com/_imprit/" ><i class="fab fa-instagram"></i></a></div>
-        <div><a href="https://github.com/pritsahkar" ><i class="fab fa-github"></i></a></div>
+        <div><a href="https://github.com/prit29" ><i class="fab fa-github"></i></a></div>
         <div><a href="mailto:pritsahkar2000@gmail.com" ><i class="far fa-envelope"></i></a></div>
         <div><a href="https://play.google.com/store/apps/developer?id=TeQ+Prit" ><i class="fab fa-google-play"></i></a></div>
     </div>
